# ContinentalDataManagement

./: .gitignore  CMakeLists.config.template  CMakeLists.txt  README.md
cmake/: ContinentalDataManagementConfig.cmake.in  GoogleTest-CMakeLists.txt.in
include/continental/dataManagement/: Raster.h  RasterFile.h  ReclassParameters.h  ResampleData.h  SpatialAnalyst.h
include/continental/datamanagement/: Raster.h  RasterFile.h  ReclassParameters.h  ResampleData.h  SpatialAnalyst.h  continentaldatamanagement_export.h  raster.h  rasterfile.h  reclassparameters.h  resampledata.h  spatialanalyst.h
include/continentaldatamanagement/: raster.h  rasterfile.h  reclassparameters.h  resampledata.h  spatialanalyst.h
src/: Raster.cpp  RasterFile.cpp  ReclassParameters.cpp  ResampleData.cpp  SpatialAnalyst.cpp  raster.cpp  rasterfile.cpp  reclassparameters.cpp  resampledata.cpp  spatialanalyst.cpp
test/: CMakeLists.txt
test/src/: main.cpp
